--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello Schmaniel!
+<!DOCTYPE html>
+<html lang="en-US">
+
+<head>
+    <title>Marlena Alvino</title>
+    <link href="/bootstrap.css" rel="stylesheet" type="text/css"/>        
+</head>
+
+<body>
+    <p>Hello Schmaniel!</p>
+</body>
+</html>
